--- a/templates/register.html
+++ b/templates/register.html
@@ -4,13 +4,25 @@
 
 <!----Username-->
 <div class="row">
-  <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+  <form
+    class="col s12 m8 offset-m2"
+    method="POST"
+    action="{{ url_for('register') }}"
+  >
     <div class="card-panel">
       <div class="row">
         <div class="input-field col s12">
           <i class="fas fa-user-plus prefix light-blue-text text-darken-4"></i>
-          <input id="username" name="username" type="text" minlength="5"
-            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required />
+          <input
+            id="username"
+            name="username"
+            type="text"
+            minlength="5"
+            maxlength="15"
+            pattern="^[a-zA-Z0-9]{5,15}$"
+            class="validate"
+            required
+          />
           <label for="username">Username</label>
         </div>
       </div>
@@ -24,7 +36,9 @@
             type="password"
             class="validate"
             minlength="5"
-            maxlength="15" required
+            maxlength="15"
+            pattern="^[a-zA-Z0-9]{5,15}$"
+            required
           />
           <label for="password">Password</label>
         </div>
