--- a/templates/register.html
+++ b/templates/register.html
@@ -56,4 +56,11 @@
   </form>
 </div>
 
+<div class="row">
+    <div class="col s12">
+        <p class="center-align">New Here?? <a href="{{ url_for('register') }}" class="light-blue-text text-darken-4">Register</a></p>
+    </div>        
+</div>
+
+
 {% endblock %}
