--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
       {% endfor %} {% endif %} {% endwith %}
     </section>
 
-    <main>{% block content %} {% endblock %}</main>
+    <main class="container">{% block content %} {% endblock %}</main>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
